--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -19,5 +21,8 @@
     "react-icons": "^4.8.0",
     "sass": "^1.61.0",
     "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "typescript": "5.0.4"
   }
 }
