--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-paginate": "^8.1.5",
+    "react-table": "^7.8.0",
     "sass": "^1.61.0",
     "tailwindcss": "3.3.1"
   },
