--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "autoprefixer": "10.4.14",
