--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.4.1",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "faker": "^6.6.6",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-paginate": "^8.1.5",
